Update mobile version accent colors to match desktop filter button scheme and add side filter button colors

--- a/mobile.html
+++ b/mobile.html
@@ -127,6 +127,18 @@
             color: white;
         }
 
+        .button-white {
+            background: white;
+            color: #333;
+            border: 2px solid #333;
+        }
+
+        .button-black {
+            background: #333;
+            color: white;
+            border: 2px solid #333;
+        }
+
         .slider-container {
             margin-bottom: 15px;
         }
@@ -209,27 +221,27 @@
         }
 
         .move-card.move-quality-best {
-            border-left-color: #4caf50;
+            border-left-color: #1976D2;
         }
 
         .move-card.move-quality-excellent {
-            border-left-color: #2196f3;
+            border-left-color: #4CAF50;
         }
 
         .move-card.move-quality-good {
-            border-left-color: #8bc34a;
+            border-left-color: #8BC34A;
         }
 
         .move-card.move-quality-inaccuracy {
-            border-left-color: #ff9800;
+            border-left-color: #FFC107;
         }
 
         .move-card.move-quality-mistake {
-            border-left-color: #f44336;
+            border-left-color: #FF9800;
         }
 
         .move-card.move-quality-blunder {
-            border-left-color: #d32f2f;
+            border-left-color: #F44336;
         }
 
         .move-summary {
@@ -258,33 +270,33 @@
         }
 
         .quality-best {
-            background: #e8f5e8;
-            color: #2e7d32;
+            background: #1976D2;
+            color: white;
         }
 
         .quality-excellent {
-            background: #e3f2fd;
-            color: #1565c0;
+            background: #4CAF50;
+            color: white;
         }
 
         .quality-good {
-            background: #e8f5e8;
-            color: #388e3c;
+            background: #8BC34A;
+            color: white;
         }
 
         .quality-inaccuracy {
-            background: #fff3e0;
-            color: #f57c00;
+            background: #FFC107;
+            color: #333;
         }
 
         .quality-mistake {
-            background: #ffebee;
-            color: #d32f2f;
+            background: #FF9800;
+            color: white;
         }
 
         .quality-blunder {
-            background: #ffebee;
-            color: #c62828;
+            background: #F44336;
+            color: white;
         }
 
         .move-labels {
