Make sticky header quality filter buttons icon-only to fit all on one line

--- a/mobile.html
+++ b/mobile.html
@@ -507,6 +507,8 @@
             font-size: 0.8em;
         }
 
+
+
         .sticky-header.show {
             display: block;
         }
@@ -585,22 +587,22 @@
     </style>
 </head>
 <body>
-        <!-- Sticky header for move quality filters -->
-    <div class="sticky-header" id="sticky-header">
-        <div class="filter-controls">
-            <button class="filter-button button-all active" data-quality="all">All</button>
-            <button class="filter-button button-best" data-quality="best">⭐ Best</button>
-            <button class="filter-button button-excellent" data-quality="excellent">👍 Excellent</button>
-            <button class="filter-button button-good" data-quality="good">✅ Good</button>
-            <button class="filter-button button-inaccuracy" data-quality="inaccuracy">⚠️ Inaccuracy</button>
-            <button class="filter-button button-mistake" data-quality="mistake">❌ Mistake</button>
-            <button class="filter-button button-blunder" data-quality="blunder">💥 Blunder</button>
-            <button class="filter-button button-all-errors" data-quality="errors">💥 All Errors</button>
+                <!-- Sticky header for move quality filters -->
+        <div class="sticky-header" id="sticky-header">
+            <div class="filter-controls">
+                <button class="filter-button button-all active" data-quality="all">All</button>
+                <button class="filter-button button-best" data-quality="best">⭐</button>
+                <button class="filter-button button-excellent" data-quality="excellent">👍</button>
+                <button class="filter-button button-good" data-quality="good">✅</button>
+                <button class="filter-button button-inaccuracy" data-quality="inaccuracy">⚠️</button>
+                <button class="filter-button button-mistake" data-quality="mistake">❌</button>
+                <button class="filter-button button-blunder" data-quality="blunder">💥</button>
+                <button class="filter-button button-all-errors" data-quality="errors">💥</button>
+            </div>
+            <div class="move-counter" id="sticky-move-counter">
+                <span id="sticky-current-count">0</span> of <span id="sticky-total-count">0</span> moves
+            </div>
         </div>
-        <div class="move-counter" id="sticky-move-counter">
-            <span id="sticky-current-count">0</span> of <span id="sticky-total-count">0</span> moves
-        </div>
-    </div>
 
     <div class="container">
         <div class="header">
