--- a/mobile.html
+++ b/mobile.html
@@ -97,6 +97,11 @@
             color: white;
         }
 
+        .button-all.active {
+            background: #9C27B0 !important;
+            color: white !important;
+        }
+
         .button-best {
             background: #1976D2;
             color: white;
@@ -133,14 +138,26 @@
         }
 
         .button-white {
-            background: white;
-            color: #333;
+            background: #9E9E9E;
+            color: white;
+            border: 2px solid transparent;
+        }
+
+        .button-white.active {
+            background: #9C27B0 !important;
+            color: white !important;
             border: 2px solid #333;
         }
 
         .button-black {
-            background: #333;
+            background: #9E9E9E;
             color: white;
+            border: 2px solid transparent;
+        }
+
+        .button-black.active {
+            background: #9C27B0 !important;
+            color: white !important;
             border: 2px solid #333;
         }
 
