Use ∀ symbol for 'All' button in sticky header to make it more compact and fit all buttons on one line

--- a/mobile.html
+++ b/mobile.html
@@ -607,7 +607,7 @@
                 <!-- Sticky header for move quality filters -->
         <div class="sticky-header" id="sticky-header">
             <div class="filter-controls">
-                <button class="filter-button button-all active" data-quality="all">All</button>
+                <button class="filter-button button-all active" data-quality="all">∀</button>
                 <button class="filter-button button-best" data-quality="best">⭐</button>
                 <button class="filter-button button-excellent" data-quality="excellent">👍</button>
                 <button class="filter-button button-good" data-quality="good">✅</button>
