Fix side filter button colors to match desktop: white button has white background, black button has black background

--- a/mobile.html
+++ b/mobile.html
@@ -138,9 +138,9 @@
         }
 
         .button-white {
-            background: #9E9E9E;
-            color: white;
-            border: 2px solid transparent;
+            background: white;
+            color: #333;
+            border: 2px solid #333;
         }
 
         .button-white.active {
@@ -150,9 +150,9 @@
         }
 
         .button-black {
-            background: #9E9E9E;
+            background: #333;
             color: white;
-            border: 2px solid transparent;
+            border: 2px solid #333;
         }
 
         .button-black.active {
@@ -530,8 +530,9 @@
         }
 
         .sticky-header .filter-button {
-            padding: 4px 8px;
-            font-size: 0.8em;
+            padding: 4px 6px;
+            font-size: 0.75em;
+            min-width: 28px;
         }
 
 
@@ -633,7 +634,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>♟️ Chess Mistakes</h1>
+            <h1>♟️ teecush Chess Mistakes</h1>
             <p>Mobile-optimized chess analysis viewer</p>
         </div>
 
