Fix side filter button active state CSS specificity issue

--- a/mobile.html
+++ b/mobile.html
@@ -161,6 +161,14 @@
             border: 2px solid #333;
         }
 
+        /* Override the general active state for side buttons */
+        .filter-button.button-white.active,
+        .filter-button.button-black.active {
+            background: #9C27B0 !important;
+            color: white !important;
+            border: 2px solid #333 !important;
+        }
+
         .slider-container {
             margin-bottom: 15px;
         }
