Update error icons to standard chess notation

--- a/mobile.html
+++ b/mobile.html
@@ -685,9 +685,9 @@
                 <button class="filter-button button-best" data-quality="best">⭐</button>
                 <button class="filter-button button-excellent" data-quality="excellent">👍</button>
                 <button class="filter-button button-good" data-quality="good">✅</button>
-                <button class="filter-button button-inaccuracy" data-quality="inaccuracy">⚠️</button>
-                <button class="filter-button button-mistake" data-quality="mistake">❌</button>
-                <button class="filter-button button-blunder" data-quality="blunder">💥</button>
+                <button class="filter-button button-inaccuracy" data-quality="inaccuracy">!?</button>
+                <button class="filter-button button-mistake" data-quality="mistake">?</button>
+                <button class="filter-button button-blunder" data-quality="blunder">??</button>
                 <button class="filter-button button-all-errors" data-quality="errors">💥</button>
             </div>
             <div class="move-counter" id="sticky-move-counter">
@@ -709,9 +709,9 @@
                     <button class="filter-button button-best" data-quality="best">⭐ Best</button>
                     <button class="filter-button button-excellent" data-quality="excellent">👍 Excellent</button>
                     <button class="filter-button button-good" data-quality="good">✅ Good</button>
-                    <button class="filter-button button-inaccuracy" data-quality="inaccuracy">⚠️ Inaccuracy</button>
-                    <button class="filter-button button-mistake" data-quality="mistake">❌ Mistake</button>
-                    <button class="filter-button button-blunder" data-quality="blunder">💥 Blunder</button>
+                    <button class="filter-button button-inaccuracy" data-quality="inaccuracy">!? Inaccuracy</button>
+                    <button class="filter-button button-mistake" data-quality="mistake">? Mistake</button>
+                    <button class="filter-button button-blunder" data-quality="blunder">?? Blunder</button>
                     <button class="filter-button button-all-errors" data-quality="errors">💥 All Errors</button>
                 </div>
             </div>
@@ -819,7 +819,7 @@
             "Best": "⭐",
             "Excellent": "👍",
             "Good": "✅",
-            "Inaccuracy": "?!",
+            "Inaccuracy": "!?",
             "Mistake": "?",
             "Blunder": "??"
         };
