--- a/mobile.html
+++ b/mobile.html
@@ -305,6 +305,12 @@
             flex: 1;
         }
 
+        .move-header-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         .move-quality {
             display: inline-block;
             padding: 4px 8px;
@@ -401,9 +407,7 @@
             color: #666;
         }
 
-        .move-summary-right {
-            text-align: right;
-        }
+
 
         .move-number {
             font-weight: bold;
@@ -1077,11 +1081,15 @@
                 <div class="move-card move-quality-${actualQuality.toLowerCase().replace(' ', '-')}">
                     <div class="move-summary">
                         <div class="move-summary-left">
-                            <span class="move-quality quality-${actualQuality.toLowerCase().replace(' ', '-')}">${getQualityDisplay(actualQuality)}</span>
+                            <div class="move-header-row">
+                                <span class="move-quality quality-${actualQuality.toLowerCase().replace(' ', '-')}">${getQualityDisplay(actualQuality)}</span>
+                                <div class="times-repeated">${move.Times_Repeated || 0}×</div>
+                            </div>
                             <div class="move-labels">
                                 <div class="move-row">
                                     <span class="your-move-label">Your Move:</span> <span class="your-move-text">${move.Move || 'N/A'}</span>
                                     <span class="best-move-label">Best Move:</span> <span class="best-move-text">${move.Stockfish_Best_Move || 'N/A'}</span>
+                                    <div class="move-number">Move #${getMoveNumberFromFEN(move.Position) || move.Move_Number || 'N/A'}</div>
                                 </div>
                                 <div class="eval-row">
                                     <span class="eval-label">Eval:</span> 
@@ -1094,10 +1102,6 @@
                                     </button>
                                 </div>
                             </div>
-                        </div>
-                        <div class="move-summary-right">
-                            <div class="times-repeated">${move.Times_Repeated || 0}×</div>
-                            <div class="move-number">Move #${getMoveNumberFromFEN(move.Position) || move.Move_Number || 'N/A'}</div>
                         </div>
                     </div>
                     
